--- a/frontend/src/assets/css/font.scss
+++ b/frontend/src/assets/css/font.scss
@@ -22,9 +22,6 @@ $nanum-normal: "Nanum Gothic";
 .option-description--text {
   @include font-style(500, $nanum-normal, 14px, $textTitle);
 }
-.option-description--text-blue {
-  @include font-style(500, $nanum-normal, 14px, $point-color);
-}
 .option-description--text-red {
   @include font-style(500, $nanum-normal, 12px, $red);
 }
@@ -47,13 +44,10 @@ $nanum-normal: "Nanum Gothic";
   color: $white;
 }
 @mixin black() {
-  color: $light-black;
+  color: $black;
 }
 @mixin red() {
   color: $red ;
-}
-@mixin pointColor() {
-  color: $point-color;
 }
 @mixin textBody() {
   color: $textBody;
@@ -64,20 +58,14 @@ $nanum-normal: "Nanum Gothic";
 @mixin textTitle() {
   color: $textTitle
 }
-@mixin textSub() {
-  color: $textSub;
-}
 @mixin gray() {
   color: $gray1;
-}
-@mixin yellow() {
-  color: $rob-roy;
 }
 @mixin default() {
   letter-spacing: -0.39px;
   font-weight: 400;
   font-style: normal;
   font-size: 12px;
-  color: $light-black;
+  color: $black;
   font-family: $nanum-normal;
 }
