feat: button, cardui 추가

--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -1,11 +1,12 @@
-$white: rgba(255,255,255,1);
+$white: rgba(255, 255, 255, 1);
 $black: #222222;
-$line: rgba(230,230,230,1);
+$line: rgba(230, 230, 230, 1);
 $textTitle: rgba(86, 86, 86, 1);
 $textBody: rgba(140, 140, 140, 1);
-$textPlaceholder:  rgba(173, 173, 173, 1);
+$textPlaceholder: rgba(173, 173, 173, 1);
 $disabled: rgba(243, 243, 243, 1);
 $red: #f12828;
 $gray1: rgba(90, 90, 90, 1);
 $gray2: rgba(151, 151, 151, 1);
 $gray3: rgba(187, 187, 187, 1);
+$pointColor: #fcba08;
