--- a/frontend/src/stories/components/common/layout/header/header.scss
+++ b/frontend/src/stories/components/common/layout/header/header.scss
@@ -1,6 +1,14 @@
+@import "src/assets/css/color.scss";
+
+.header {
+  border-bottom: 1px solid $line;
+  background-color: $pointColor;
+  width: 100%;
+  height: 64px;
+}
+
 .wrapper {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding: 15px 20px;
   display: flex;
   align-items: center;
