--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -4,6 +4,7 @@ $line: rgba(230, 230, 230, 1);
 $textTitle: rgba(86, 86, 86, 1);
 $textBody: rgba(140, 140, 140, 1);
 $textPlaceholder: rgba(173, 173, 173, 1);
+$textSub: #D6D6D6;
 $disabled: rgba(243, 243, 243, 1);
 $red: #f12828;
 $gray1: rgba(90, 90, 90, 1);
