--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -1,6 +1,6 @@
 $white: rgba(255, 255, 255, 1);
 $black: #222222;
-$line: rgba(230, 230, 230, 1);
+$line: #E2E2E2;
 $textTitle: rgba(86, 86, 86, 1);
 $textBody: rgba(140, 140, 140, 1);
 $textPlaceholder: rgba(173, 173, 173, 1);
