--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -2,12 +2,15 @@ $white: rgba(255, 255, 255, 1);
 $black: #222222;
 $line: #E2E2E2;
 $textTitle: rgba(86, 86, 86, 1);
-$textBody: rgba(140, 140, 140, 1);
 $textPlaceholder: rgba(173, 173, 173, 1);
 $textSub: #D6D6D6;
+$textBody: #656565;
 $disabled: rgba(243, 243, 243, 1);
 $red: #f12828;
 $gray1: rgba(90, 90, 90, 1);
 $gray2: rgba(151, 151, 151, 1);
 $gray3: rgba(187, 187, 187, 1);
 $pointColor: #fcba08;
+
+$gray4: #EBEBEB;
+
