--- a/frontend/src/assets/css/common.scss
+++ b/frontend/src/assets/css/common.scss
@@ -98,3 +98,10 @@ $total: 100;
 .flex {
   display: flex;
 }
+.justify-center {
+  justify-content: center;
+}
+
+.center {
+  text-align: center;
+}
