--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -8,9 +8,13 @@ $textBody: #656565;
 $disabled: rgba(243, 243, 243, 1);
 $red: #f12828;
 $gray1: rgba(90, 90, 90, 1);
-$gray2: rgba(151, 151, 151, 1);
+$gray2: #A3A3A3;
 $gray3: rgba(187, 187, 187, 1);
+
 $pointColor: #fcba08;
 
 $gray4: #EBEBEB;
 
+$button_black: #494949;
+$button_gray: #EDEDED;
+$label: #C2C2C2;
