--- a/frontend/src/assets/css/utils.scss
+++ b/frontend/src/assets/css/utils.scss
@@ -22,6 +22,12 @@
   }
 }
 
+.dark {
+  -webkit-filter: brightness(90%);
+  filter: brightness(90%);
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
 .select-box {
   position: relative;
   width: 150px;
