--- a/frontend/src/assets/css/utils.scss
+++ b/frontend/src/assets/css/utils.scss
@@ -28,6 +28,12 @@
   background-color: rgba(255, 255, 255, 0.8);
 }
 
+.disabled {
+  background-color: $disabled;
+  color: $textPlaceholder;
+  cursor: none;
+}
+
 .select-box {
   position: relative;
   width: 150px;
