--- a/frontend/src/assets/css/reset.scss
+++ b/frontend/src/assets/css/reset.scss
@@ -110,6 +110,10 @@ section {
 
 body {
   line-height: 1;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none
 }
 
 ol,
