--- a/frontend/src/assets/css/utils.scss
+++ b/frontend/src/assets/css/utils.scss
@@ -98,3 +98,18 @@
   height: 5px;
   width: 100%;
 }
+
+.tags {
+  border-radius: 4px;
+  width: fit-content;
+  font-family: jua;
+  font-size: 10px;
+  color: #a9a9a9;
+  background-color: #efefef;
+  padding: 2px 10px;
+}
+
+.recipe-like--wrapper {
+  display: flex;
+  align-items: center;
+}
