--- a/frontend/src/assets/css/utils.scss
+++ b/frontend/src/assets/css/utils.scss
@@ -92,11 +92,20 @@
   }
 }
 
-.dotted {
-  border: none;
-  border-top: 2px dashed #ededed;
-  height: 5px;
-  width: 100%;
+/* 태그랑 아이콘 분리해야하나/.//  */
+.ingredient-icon--wrapper {
+  border: 1px solid $line;
+  border-radius: 50%;
+  width: 52px;
+  height: 52px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:hover {
+    background-color: rgba(245, 245, 245, 0.5);
+  }
 }
 
 .tags {
@@ -108,6 +117,14 @@
   background-color: #efefef;
   padding: 2px 10px;
 }
+
+.dotted {
+  border: none;
+  border-top: 2px dashed #ededed;
+  height: 5px;
+  width: 100%;
+}
+
 
 .recipe-like--wrapper {
   display: flex;
