--- a/frontend/src/assets/css/common.scss
+++ b/frontend/src/assets/css/common.scss
@@ -62,6 +62,10 @@ $total: 100;
   }
 }
 
+.m-auto {
+  margin: auto;
+}
+
 .w-100 {
   width: 100%;
 }
@@ -72,6 +76,10 @@ $total: 100;
 
 .flex {
   display: flex;
+}
+
+.align-center {
+  align-items: center;
 }
 
 .justify-center {
