--- a/frontend/src/assets/css/common.scss
+++ b/frontend/src/assets/css/common.scss
@@ -89,3 +89,9 @@ $total: 100;
 .center {
   text-align: center;
 }
+
+.flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
