feat: 레시피 작성 빈 값 검사식 추가

--- a/frontend/src/assets/css/common.scss
+++ b/frontend/src/assets/css/common.scss
@@ -95,3 +95,11 @@ $total: 100;
   flex-direction: column;
   align-items: center;
 }
+
+.show {
+  display: inline-block !important;
+}
+
+.hide {
+  display: none !important;
+}
