feat: 네비게이션 메뉴 추가
close #14

--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -1,7 +1,7 @@
 $white: rgba(255, 255, 255, 1);
 $black: #222222;
 $line: #E2E2E2;
-$textTitle: rgba(86, 86, 86, 1);
+$textTitle: rgb(101, 101, 101);
 $textPlaceholder: rgba(173, 173, 173, 1);
 $textSub: #D6D6D6;
 $textBody: #656565;
@@ -18,3 +18,5 @@ $gray4: #EBEBEB;
 $button_black: #494949;
 $button_gray: #EDEDED;
 $label: #C2C2C2;
+
+
