fix (front): 디자인 변경 해보는 중

--- a/frontend/src/assets/css/font.scss
+++ b/frontend/src/assets/css/font.scss
@@ -3,7 +3,10 @@
 @font-face {
   font-family: 'jua';
   font-style: normal;
-  src: url("@/assets/fonts/Jua-Regular.woff") format('woff');
+  src: url("@/assets/fonts/KoPubWorld-Dotum-Light.woff") format('woff');
+  //src: url("@/assets/fonts/Jua-Regular.woff") format('woff');
+  //src: url("@/assets/fonts/MapoGoldenPier.woff") format('woff');
+  //src: url("@/assets/fonts/KimjungchulMyungjo-Light.woff") format('woff');
   font-display: swap;
 }
 
