--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -11,7 +11,8 @@ $gray1: rgba(90, 90, 90, 1);
 $gray2: #A3A3A3;
 $gray3: rgba(187, 187, 187, 1);
 
-$pointColor: #fcba08;
+//$pointColor: #fcba08;
+$pointColor: #fff;
 
 $gray4: #EBEBEB;
 
