--- a/frontend/src/assets/css/reset.scss
+++ b/frontend/src/assets/css/reset.scss
@@ -88,10 +88,10 @@ video {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  font-family: 'Pretendard Variable', Pretendard, -apple-system,
-  BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
-  'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji',
-  'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
+  //font-family: 'Pretendard Variable', Pretendard, -apple-system,
+  //BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
+  //'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji',
+  //'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
 }
 
 article,
