--- a/frontend/src/assets/css/utils.scss
+++ b/frontend/src/assets/css/utils.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 
   &::-webkit-scrollbar {
-    width: 6px;
+    width: 4px;
   }
 
   /* 스크롤바 뒷 배경 설정*/
@@ -16,9 +16,9 @@
 
   /* 스크롤바 막대 설정*/
   &::-webkit-scrollbar-thumb {
-    background-color: #d9d9d9;
+    background-color: $black;
     /* 스크롤바 둥글게 설정  */
-    border-radius: 10px;
+    border-radius: 1px;
   }
 }
 
