--- a/frontend/src/assets/css/common.scss
+++ b/frontend/src/assets/css/common.scss
@@ -90,6 +90,10 @@ $total: 100;
   text-align: center;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .flex-column-center {
   display: flex;
   flex-direction: column;
