--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -1,23 +1,19 @@
 $white: rgba(255, 255, 255, 1);
 $black: #222222;
-$line: #E2E2E2;
-$textTitle: rgb(101, 101, 101);
-$textPlaceholder: rgba(173, 173, 173, 1);
+
+$line: #A3A3A3;
+$line-white: #E2e2e2;
+
+$textTitle: #656565FF;
+$textPlaceholder: #ADADADFF;
 $textSub: #D6D6D6;
 $textBody: #656565;
-$disabled: rgba(243, 243, 243, 1);
+$disabled: #F3F3F3FF;
 $red: #f12828;
-$gray1: rgba(90, 90, 90, 1);
-$gray2: #A3A3A3;
-$gray3: rgba(187, 187, 187, 1);
-
-//$pointColor: #fcba08;
-$pointColor: #fff;
-
+$gray1: #5A5A5AFF;
+$gray3: #BBBBBBFF;
 $gray4: #EBEBEB;
 
 $button_black: #494949;
 $button_gray: #EDEDED;
 $label: #C2C2C2;
-
-
