fix: 사이드 메뉴 수정

--- a/frontend/src/assets/css/common.scss
+++ b/frontend/src/assets/css/common.scss
@@ -93,6 +93,9 @@ $total: 100;
 .text-left {
   text-align: left;
 }
+.text-right {
+  text-align: right;
+}
 
 .flex-column-center {
   display: flex;
