feat (front): 레시피 삭제 추가

--- a/frontend/src/assets/css/common.scss
+++ b/frontend/src/assets/css/common.scss
@@ -85,6 +85,9 @@ $total: 100;
 .justify-center {
   justify-content: center;
 }
+.justify-content-around {
+  justify-content: space-around;
+}
 
 .center {
   text-align: center;
