--- a/frontend/src/assets/css/utils.scss
+++ b/frontend/src/assets/css/utils.scss
@@ -108,15 +108,23 @@
   }
 }
 
-.tags {
-  border-radius: 4px;
-  width: fit-content;
-  font-family: jua;
-  font-size: 10px;
-  color: #a9a9a9;
-  background-color: #efefef;
-  padding: 2px 10px;
+.tags--wrapper {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 6px;
+
+  .tags {
+    border-radius: 4px;
+    width: fit-content;
+    font-family: $kor;
+    font-size: 10px;
+    color: #a9a9a9;
+    background-color: #efefef;
+    padding: 2px 10px;
+  }
 }
+
 
 .dotted {
   border: none;
