fix (front): css 수정

--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -3,7 +3,7 @@ $black: #222222;
 
 $line: #A3A3A3;
 $line-white: #E2e2e2;
-
+$hr: #DBDBDB;
 $textTitle: #656565FF;
 $textPlaceholder: #ADADADFF;
 $textSub: #D6D6D6;
@@ -16,3 +16,5 @@ $gray3: #EBEBEB;
 $button_black: #494949;
 $button_gray: #EDEDED;
 $label: #C2C2C2;
+
+$gold1: #b5851b;
