--- a/frontend/src/assets/css/utils.scss
+++ b/frontend/src/assets/css/utils.scss
@@ -94,7 +94,7 @@
 
 /* 태그랑 아이콘 분리해야하나/.//  */
 .ingredient-icon--wrapper {
-  border: 1px solid $line;
+  border: 1px solid $hr;
   border-radius: 50%;
   width: 52px;
   height: 52px;
