--- a/frontend/src/assets/css/reset.scss
+++ b/frontend/src/assets/css/reset.scss
@@ -152,7 +152,7 @@ hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid #e2e2e2;
+  border-top: 1px solid #DBDBDB;
   margin: 1em 0;
   padding: 0;
 }
