feat (front): 주 색상 변경

--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -18,3 +18,11 @@ $button_gray: #EDEDED;
 $label: #C2C2C2;
 
 $gold1: #b5851b;
+
+/* SAMPLE COLOR*/
+
+$primary: #7a583a;
+$secondary: #d4bca7;
+
+$secondary-light: #BBB2A7;
+
