--- a/frontend/src/assets/css/index.scss
+++ b/frontend/src/assets/css/index.scss
@@ -1,4 +1,5 @@
-@import "common";
-@import "reset";
-@import "color";
-@import "utils";
+@import "common.scss";
+@import "reset.scss";
+@import "color.scss";
+@import "utils.scss";
+@import "font.scss";
