fix (front): 레시피 상세보기 구성 수정
- 주재료, 양념 표 추가

--- a/frontend/src/assets/css/color.scss
+++ b/frontend/src/assets/css/color.scss
@@ -6,7 +6,7 @@ $line-white: #E2e2e2;
 $hr: #DBDBDB;
 $textTitle: #656565FF;
 $textPlaceholder: #ADADADFF;
-$textSub: #D6D6D6;
+$textSub: #8E8B82;
 $disabled: #F3F3F3FF;
 $red: #f12828;
 $gray1: #5A5A5AFF;
@@ -17,12 +17,11 @@ $button_black: #494949;
 $button_gray: #EDEDED;
 $label: #C2C2C2;
 
+
 $gold1: #b5851b;
 
 /* SAMPLE COLOR*/
-
 $primary: #7a583a;
 $secondary: #d4bca7;
-
 $secondary-light: #BBB2A7;
 
