--- a/frontend/src/assets/css/common.scss
+++ b/frontend/src/assets/css/common.scss
@@ -86,6 +86,10 @@ $total: 100;
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
 .justify-content-around {
   justify-content: space-around;
 }
