--- a/frontend/src/assets/css/utils.scss
+++ b/frontend/src/assets/css/utils.scss
@@ -148,7 +148,7 @@
 
 .dotted {
   border: none;
-  border-top: 2px dashed $line;
+  border-top: 2px dashed $line-white;
   height: 5px;
   width: 100%;
 }
