feat (front): comment component layout

--- a/frontend/src/assets/css/common.scss
+++ b/frontend/src/assets/css/common.scss
@@ -78,6 +78,11 @@ $total: 100;
   display: flex;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 .align-center {
   align-items: center;
 }
