--- a/frontend/src/assets/css/reset.scss
+++ b/frontend/src/assets/css/reset.scss
@@ -148,11 +148,12 @@ a {
   background: transparent;
 }
 
+//#DBDBDB
 hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid #DBDBDB;
+  border-top: 1px solid $black;
   margin: 1em 0;
   padding: 0;
 }
