--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -65,3 +65,18 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+.flex {
+  display: flex;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+
+
