--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -61,6 +61,10 @@ q:before, q:after {
   content: none;
 }
 
+main {
+  margin-top: 100px;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
