feat: home recipe 불러오기

--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -2,5 +2,6 @@ $white: #fff;
 $black: #222222;
 $black100: rgb(97, 97, 97);
 $gray100: rgb(158, 158, 158);
+$gray200: #ededed;
 $primary: rgb(147, 112, 98);
 $background-block: rgb(244, 240, 239);
