--- a/client/src/components/typography/Typhography.mixin.scss
+++ b/client/src/components/typography/Typhography.mixin.scss
@@ -1,47 +1,59 @@
+@mixin default() {
+  font-family: 'Noto Serif KR', serif;
+}
+
 @mixin h1 {
-  font-size: min(3vw, 28px);
+  @include default();
+  font-size: min(4vw, 28px);
   line-height: 38px;
   letter-spacing: 0.15px;
 }
 
 @mixin h2 {
-  font-size: min(3vw, 26px);
+  @include default();
+  font-size: min(4vw, 26px);
   line-height: 34px;
   letter-spacing: 0.15px;
 }
 
 @mixin h3 {
-  font-size: min(3vw, 24px);
+  @include default();
+  font-size: min(4vw, 24px);
   line-height: 28px;
   letter-spacing: 0.15px;
 }
 
 @mixin h4 {
-  font-size: min(3vw, 22px);
+  @include default();
+  font-size: min(4vw, 22px);
   line-height: 28px;
   letter-spacing: 0.15px;
 }
 
 @mixin h5 {
-  font-size: min(3vw, 20px);
+  @include default();
+  font-size: min(4vw, 20px);
   line-height: 28px;
   letter-spacing: 0.15px;
 }
 
 @mixin body1 {
-  font-size: min(3vw, 18px);
+  @include default();
+  font-size: min(4vw, 18px);
   line-height: 21px;
   letter-spacing: 0.15px;
 }
 
 @mixin body2 {
-  font-size: min(3vw, 16px);
+  @include default();
+  font-size: min(4vw, 16px);
   line-height: 19px;
   letter-spacing: 0.15px;
 }
 
 @mixin caption {
-  font-size: min(3vw, 14px);
+  @include default();
+  font-size: min(4vw, 14px);
   line-height: 14px;
   letter-spacing: 0.15px;
 }
