--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -55,6 +55,11 @@ blockquote, q {
   quotes: none;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
