--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -3,5 +3,5 @@ $black: #222222;
 $black100: rgb(97, 97, 97);
 $gray100: rgb(158, 158, 158);
 $gray200: #ededed;
-$primary: rgb(147, 112, 98);
+$primary: #FCBA08;
 $background-block: rgb(244, 240, 239);
