--- a/client/src/components/common/modal/Modal.scss
+++ b/client/src/components/common/modal/Modal.scss
@@ -23,3 +23,22 @@
     transform: translateX(-50%) translateY(-50%);
   }
 }
+
+.modal-show {
+  display: inline-block;
+}
+
+.modal-hide {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .modal {
+
+    &__body {
+      border-radius: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
