--- a/client/src/components/layout/header/Header.module.scss
+++ b/client/src/components/layout/header/Header.module.scss
@@ -7,7 +7,8 @@
   background-color: $white;
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.3);
   padding: 10px 16px;
-  
+  z-index: 99;
+
   &_container {
     width: 100%;
     height: 70%;
