--- a/client/src/components/ui/tile/Tile.module.scss
+++ b/client/src/components/ui/tile/Tile.module.scss
@@ -1,49 +1,89 @@
-.tile {
-  width: 100%;
-  display: grid;
-  grid-template-rows: repeat(2, 100px);
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 100px;
+.tile_container {
+  padding: 1rem;
 
-  .item:nth-child(1) {
-    grid-column: 1 / 4;
-  }
-
-  .item:nth-child(3) {
-    grid-column: span 2;
-  }
-
-  .item {
-    display: flex;
+  .tile {
+    display: grid;
     justify-content: center;
-    align-items: center;
-    padding: 20px;
-    box-sizing: border-box;
-    position: relative;
-    font-size: 20px;
-    color: $black;
-    font-weight: 900;
-    text-shadow: 3px 0 0 rgba(white, .5);
+    width: 100%;
+    grid-template-columns: 49% 23.5% 23.5%;
+    grid-template-rows: 1fr 1fr;
+    gap: 8px;
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: 5px;
-      left: 5px;
-      border: 4px solid $black;
-      border-radius: 10px;
-      box-sizing: border-box;
-      width: calc(100% - 10px);
-      height: calc(100% - 10px);
-      z-index: -1;
+    .item {
+      border: 1px solid gray;
+
+      &:hover {
+        filter: brightness(80%);
+      }
     }
 
-    &:nth-child(1) {
-      grid-column: 1 / 4;
+    .item_cover {
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      position: relative;
+      left: 0;
+      bottom: 100%;
+      display: flex;
+      align-items: flex-end;
+      padding-left: 4.4%;
+      padding-bottom: 5.8%;
+
+      &:hover {
+        filter: brightness(100%);
+        opacity: 1;
+        z-index: 1;
+      }
     }
 
-    &:nth-child(3) {
-      grid-column: span 2;
+    .item:nth-of-type(1) {
+      height: 500px;
+      grid-area: 1 / 1 / 3 / 2;
+    }
+
+    .item:nth-of-type(2) {
+      height: 250px;
+      grid-area: 1 / 2 / 1 / 4;
+    }
+
+    .item:nth-of-type(3) {
+      height: 243px;
+      grid-area: 2 / 2 / 2 / 3;
+    }
+
+    .item:nth-of-type(4) {
+      height: 243px;
+      grid-area: 2 / 3 / 2 / 4;
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .tile_container {
+    .tile {
+      width: 100%;
+      overflow: hidden;
+      display: flex;
+      justify-content: inherit;
+      height: 300px;
+
+      .item {
+        width: 100%;
+        height: 100%;
+        -webkit-user-drag: none;
+        -khtml-user-drag: none;
+        -moz-user-drag: none;
+        -o-user-drag: none;
+        user-select: none;
+        flex: none;
+      }
+
+      .item:nth-of-type(1),
+      .item:nth-of-type(2),
+      .item:nth-of-type(3),
+      .item:nth-of-type(4) {
+        height: auto;
+      }
     }
   }
 }
