--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -56,6 +56,7 @@ blockquote, q {
 }
 
 a {
+  display: inline-block;
   text-decoration: none;
   color: inherit;
 }
@@ -146,6 +147,14 @@ $total: 100;
   .gap-#{$size} {
     gap: $size + px !important;
   }
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.h-100 {
+  height: 100%;
 }
 
 
