--- a/client/src/components/layout/header/Header.module.scss
+++ b/client/src/components/layout/header/Header.module.scss
@@ -6,12 +6,14 @@
   left: 0;
   background-color: $white;
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.3);
-  padding: 10px 16px;
+  padding: 10px 6% 0;
   z-index: 99;
 
   &_container {
     width: 100%;
-    height: 70%;
+    max-width: 1280px;
+    margin: auto;
+    height: 50%;
     display: flex;
     justify-content: space-between;
     align-items: center;
