--- a/client/src/components/layout/header/navigation/Navigation.scss
+++ b/client/src/components/layout/header/navigation/Navigation.scss
@@ -1,11 +1,16 @@
 .navbar {
+  height: 50%;
+  display: flex;
+  align-items: flex-end;
 
   &-container {
     display: flex;
 
     .item {
-      border-bottom: 1px solid $black;
+      border-bottom: 2.5px solid transparent;
       margin-right: 1em;
+      padding-right: 6px;
+      padding-bottom: 3px;
 
       &-active {
         border-color: $primary;
