style: component css update

--- a/client/src/components/ui/tile/Tile.module.scss
+++ b/client/src/components/ui/tile/Tile.module.scss
@@ -10,10 +10,10 @@
     gap: 8px;
 
     .item {
-      border: 1px solid gray;
+      border: 1px solid $line;
 
       &:hover {
-        filter: brightness(80%);
+        filter: brightness(90%);
       }
     }
 
