--- a/client/src/components/common/button/Button.module.scss
+++ b/client/src/components/common/button/Button.module.scss
@@ -2,3 +2,13 @@
   width: fit-content;
   height: auto;
 }
+
+.primary {
+  background-color: $primary;
+  border-radius: 4px;
+  padding: 4px 8px;
+
+  &:hover {
+    filter: brightness(95%);
+  }
+}
