--- a/client/src/components/login/Login.module.scss
+++ b/client/src/components/login/Login.module.scss
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 767px) {
   .login {
-    width: 100%;
-    height: 100%;
+    width: 90vw;
+    height: 90vh;
   }
 }
