--- a/client/src/components/common/input/Input.module.scss
+++ b/client/src/components/common/input/Input.module.scss
@@ -1,12 +1,12 @@
 @mixin input() {
   outline: none;
+  border: none;
 }
 
 .underline {
   @include input();
   border: none;
   border-bottom: 1px solid $gray100;
-  //padding: 8px 4px;
   padding: 9px 23px 4px 4px;
   width: 100%;
 
@@ -16,8 +16,10 @@
 }
 
 .default {
+  @include input();
   border: 1px solid $gray100;
   border-radius: 4px;
-  width: min(50vw, 100%);
+  //width: min(50vw, 100%);
+  width: 100%;
   height: 30px;
 }
