--- a/client/src/components/layout/footer/Footer.module.scss
+++ b/client/src/components/layout/footer/Footer.module.scss
@@ -1,5 +1,9 @@
 .footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  height: 150px;
-  background-color: $primary;
+  height: 100px;
+  background-color: $white;
+  border-top: 1px solid $line;
 }
